k8s/dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: angular-app
  template:
    metadata:
      labels:
        app: angular-app
    spec:
      containers:
      - name: angular-app
        image: moabukar:angular-app
        ports:
        - containerPort: 4200
