k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: angular-service
spec:
  type: ClusterIP 
  ports:
    - port: 4200
      targetPort: 4200
  selector:
    app: angular-app
