k8s/nginx-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /angular
        pathType: Prefix
        backend:
          service:
            name: angular-service
            port:
              number: 4200
